@@ -22,7 +22,7 @@
 
 use strict;
 use warnings;
-use Getopt::Long qw(:config gnu_getopt);
+use Getopt::Long qw(:config bundling permute no_getopt_compat);
 use File::Temp qw/tempfile/;
 
 sub init_hashes;
