@@ -21,7 +21,7 @@
 use strict;
 use warnings;
 use File::Basename;
-use Getopt::Long qw(:config gnu_getopt);
+use Getopt::Long qw(:config bundling permute no_getopt_compat);
 
 BEGIN {
     pop @INC if $INC[-1] eq '.';
