@@ -23,7 +23,7 @@
 use strict;
 use warnings;
 use FileHandle;
-use Getopt::Long qw(:config gnu_getopt);
+use Getopt::Long qw(:config bundling permute no_getopt_compat);
 use Dpkg::Version;
 use Dpkg::IPC;
 
