@@ -26,7 +26,7 @@
 use 5.008;
 use strict;
 use warnings;
-use Getopt::Long qw(:config gnu_getopt);
+use Getopt::Long qw(:config bundling permute no_getopt_compat);
 use File::Basename;
 use filetest 'access';
 use Cwd;
