@@ -193,7 +193,7 @@ B<mk-origtargz> and this manpage have been written by Joachim Breitner
 use strict;
 use warnings;
 use File::Temp qw/tempdir/;
-use Getopt::Long qw(:config gnu_getopt);
+use Getopt::Long qw(:config bundling permute no_getopt_compat);
 use Pod::Usage;
 
 use Dpkg::Changelog::Debian;
